--- a/src/app/brush-graph/brush-graph.component.scss
+++ b/src/app/brush-graph/brush-graph.component.scss
@@ -1,8 +1,10 @@
-#charttrue { // Chart is showing on right side of table
+#charttrue {
+    // Chart is showing on right side of table
     height: 50vh;
     width: 30vw;
 }
-#chartfalse { // Chart is showing under the table
+#chartfalse {
+    // Chart is showing under the table
     height: 50vh;
     width: 75vw;
 }
