--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ h1 {
     font-size: 250%;
 }
 .jumbotron {
-    background-color: #659DBD;
+    background-color: #659dbd;
 }
 body {
     margin-left: 0%;
