--- a/src/app/choose-file-robot/choose-file-robot.component.html
+++ b/src/app/choose-file-robot/choose-file-robot.component.html
@@ -1,21 +1,53 @@
-<div *ngIf="showFileChooser" class="alert alert-primary fade show rounded-0 mt-0 mb-0" role="alert">
-    <button type="button" class="close mb-3" aria-label="Close" (click)="toggleFileChooser()"
-    mat-raised-button matTooltip="Close file chooser" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
-    <span aria-hidden="true">&times;</span>
+<div
+    *ngIf="showFileChooser"
+    class="alert alert-primary fade show rounded-0 mt-0 mb-0"
+    role="alert"
+>
+    <button
+        type="button"
+        class="close mb-3"
+        aria-label="Close"
+        (click)="toggleFileChooser()"
+        mat-raised-button
+        matTooltip="Close file chooser"
+        matTooltipShowDelay="1000"
+        matTooltipClass="primary-tooltip"
+    >
+        <span aria-hidden="true">&times;</span>
     </button>
     <nav>
         <ul class="pagination">
             <li [class.disabled]="!backEnabled" class="page-item">
-                <a class="page-link rounded-0" href="#" aria-label="Previous" (click)="back()">
-                <i [class.disabled]="!backEnabled" class="fas fa-long-arrow-alt-left"></i>
+                <a
+                    class="page-link rounded-0"
+                    href="#"
+                    aria-label="Previous"
+                    (click)="back()"
+                >
+                    <i
+                        [class.disabled]="!backEnabled"
+                        class="fas fa-long-arrow-alt-left"
+                    ></i>
                 </a>
             </li>
             <li class="page-item disabled">
-                <a class="page-link path rounded-0" href="#" id="currentPath">{{currentUrlView}}</a>
+                <a class="page-link path rounded-0" href="#" id="currentPath">{{
+                    currentUrlView
+                }}</a>
             </li>
-            <li *ngIf="brushes.length>0" class="page-item" (click)= "exportFile()"
-                mat-raised-button matTooltip="Export current file to this folder" matTooltipShowDelay="1000" matTooltipPosition="right" matTooltipClass="primary-tooltip">
-                <a class="page-link rounded-0" href="#"><i class="fas fa-upload"></i></a>
+            <li
+                *ngIf="brushes.length > 0"
+                class="page-item"
+                (click)="exportFile()"
+                mat-raised-button
+                matTooltip="Export current file to this folder"
+                matTooltipShowDelay="1000"
+                matTooltipPosition="right"
+                matTooltipClass="primary-tooltip"
+            >
+                <a class="page-link rounded-0" href="#"
+                    ><i class="fas fa-upload"></i
+                ></a>
             </li>
             <!--
             <li *ngIf="brushes.length>0" class="page-item disabled" (click)= "duplicateFile()"
@@ -33,16 +65,35 @@
             -->
         </ul>
     </nav>
-    <p *ngIf="fileName">Current file opened: <i>{{ fileName }}</i></p>
-    <p *ngIf="navDirectories.length === 0 && navFiles.length === 0">
-        No files or directories. There may be some problems connection to Robot Web Services.
+    <p *ngIf="fileName">
+        Current file opened: <i>{{ fileName }}</i>
     </p>
-    <p *ngFor="let dir of navDirectories" class="menuElement rounded p-0 pt-2 pb-2 m-0" (click)="moveIntoDirectory(dir)"
-        mat-raised-button matTooltip="Move into directory" matTooltipShowDelay="1000" matTooltipPosition="above" matTooltipClass="primary-tooltip">
+    <p *ngIf="navDirectories.length === 0 && navFiles.length === 0">
+        No files or directories. There may be some problems connection to Robot
+        Web Services.
+    </p>
+    <p
+        *ngFor="let dir of navDirectories"
+        class="menuElement rounded p-0 pt-2 pb-2 m-0"
+        (click)="moveIntoDirectory(dir)"
+        mat-raised-button
+        matTooltip="Move into directory"
+        matTooltipShowDelay="1000"
+        matTooltipPosition="above"
+        matTooltipClass="primary-tooltip"
+    >
         <i class="far fa-folder fa-lg icon"></i><span>{{ dir }}</span>
     </p>
-    <p *ngFor="let file of navFiles" class="menuElement rounded p-0 pt-2 pb-2 m-0" (click)="toggleFileChooser(); changeFile(file)"
-        mat-raised-button matTooltip="Open file" matTooltipShowDelay="1000" matTooltipPosition="above" matTooltipClass="primary-tooltip">
+    <p
+        *ngFor="let file of navFiles"
+        class="menuElement rounded p-0 pt-2 pb-2 m-0"
+        (click)="toggleFileChooser(); changeFile(file)"
+        mat-raised-button
+        matTooltip="Open file"
+        matTooltipShowDelay="1000"
+        matTooltipPosition="above"
+        matTooltipClass="primary-tooltip"
+    >
         <i class="far fa-file fa-lg icon"></i><span>{{ file }}</span>
     </p>
 </div>
