--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -20,8 +20,10 @@
     top: 0;
     right: 0; /* not left, because only the right part of the input seems to be clickable in some browser */
     cursor: default;
-    opacity: 0.0;
-    filter: alpha(opacity=0); /* and all the other old opacity stuff you want to support */
+    opacity: 0;
+    filter: alpha(
+        opacity=0
+    ); /* and all the other old opacity stuff you want to support */
     font-size: 300px; /* wtf, but apparently the most reliable way to make a large part of the input clickable in most browsers */
     height: 100px;
 }
