--- a/src/app/brush-map-formula/brush-map-formula.component.html
+++ b/src/app/brush-map-formula/brush-map-formula.component.html
@@ -9,8 +9,8 @@
         matTooltipClass="primary-tooltip"
         (click)="toggleBrushMapping()"
     >
-        <span aria-hidden="true">&times;</span></button
-    ><!--Remove mb-3 from button-->
+        <span aria-hidden="true">&times;</span>
+    </button>
 
     <h5>Brush Mapping</h5>
     <!-- Only show mapping options if there is at least one mapping file, formula and brush device present -->
