--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -21,7 +21,7 @@
                 <select
                     id="channelChosen"
                     (change)="addChoices(); showMaxValue()"
-                    class="form-control rounded-0"
+                    class="custom-select rounded-0"
                 >
                     <option disabled selected value>Select a channel</option>
                     <option value="ch1">{{ channelNames.ch1 }}</option>
@@ -99,7 +99,7 @@
                 class="custom-select rounded-0"
             >
                 <option disabled selected value>
-                    -- Select a channel --
+                    Select a channel
                 </option>
                 <option value="ch1">{{ channelNames.ch1 }}</option>
                 <option value="ch2">{{ channelNames.ch2 }}</option>
